--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>git config --global user.name blabla</div>
+    <div>git config --global user.email blabal@bla</div>
+    <div>git init</div>
+    <div>git status</div>
+    <div>git add</div>
+    <div>git commit</div>
+    <div>git log</div>
+    <div>git checkout</div>
+    <div>git branch</div>
+    <div>git push</div>
+    <div>git pull</div>
+    <div>git merge</div>
+    <div>git clone</div>
+    <p>.gitignore файл для приховування папок та файлів від системи контроля версій Git</p>
 </body>
 </html>
