--- a/index.html
+++ b/index.html
@@ -4,22 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cursor-Git</title>
 </head>
 <body>
-    <div>git config --global user.name blabla</div>
-    <div>git config --global user.email blabal@bla</div>
-    <div>git init</div>
-    <div>git status</div>
-    <div>git add</div>
-    <div>git commit</div>
-    <div>git log</div>
-    <div>git checkout</div>
-    <div>git branch</div>
-    <div>git push</div>
-    <div>git pull</div>
-    <div>git merge</div>
-    <div>git clone</div>
-    <p>.gitignore файл для приховування папок та файлів від системи контроля версій Git</p>
+    <div>
+        <ul>
+            <li>git config --global user.name blabla</li>
+            <li>git config --global user.email blabal@bla</li>
+            <li>git init</li>
+            <li>git status</li>
+            <li>git add</li>
+            <li>git commit</li>
+            <li>git log</li>
+            <li>git checkout</li>
+            <li>git branch</li>
+            <li>git push</li>
+            <li>git pull</li>
+            <li>git merge</li>
+            <li>git clone</li>
+        </ul>
+
+        <p><b>.gitignore</b> файл для приховування папок та файлів від системи контроля версій Git</p>
+            
+    </div>
+    <div>
+        <ul>
+            <li>git revert</li>
+            <li>git reset</li>
+            <li>git rebase</li>
+            <li>git cherry-pick</li>
+            <li>git stash</li>
+        </ul>
+    </div>
 </body>
 </html>
