--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <div>
         <ul>
-            <li>git config --global user.name blabla</li>
-            <li>git config --global user.email blabal@bla</li>
-            <li>git init</li>
-            <li>git status</li>
-            <li>git add</li>
-            <li>git commit</li>
-            <li>git log</li>
-            <li>git checkout</li>
-            <li>git branch</li>
-            <li>git push</li>
-            <li>git pull</li>
-            <li>git merge</li>
-            <li>git clone</li>
+            <li><i>git config --global user.name blabla</i> - устанавливает имя, которое будет отображаться в поле автора у выполняемых вами коммитов</li>
+            <li><i>git config --global user.email blabal@bla</i> - устанавливает адрес электронной почты, который будет отображаться в информации о выполняемых вами коммитах</li>
+            <li><i>git init</i> - cоздаёт новый локальный репозиторий с заданным именем</li>
+            <li><i>git status</i> - gеречисляет все новые или изменённые файлы, которые нуждаются в фиксации</li>
+            <li><i>git add</i> - индексирует указанный файл для последующего коммита</li>
+            <li><i>git commit</i> - фиксирует проиндексированные изменения и сохраняет их в историю версий</li>
+            <li><i>git log</i> - история коммитов для текущей ветки</li>
+            <li><i>git checkout</i> - переключается на выбранную ветку и обновляет рабочую директорию до её состояния</li>
+            <li><i>git branch</i> - создаёт новую ветку</li>
+            <li><i>git push</i> - загружает все изменения локальной ветки в удалённый репозиторий</li>
+            <li><i>git pull</i> - загружает историю из удалённого репозитория и объединяет её с локальной. pull = fetch + merge</li>
+            <li><i>git merge</i> - вносит изменения из ветки удалённого репозитория в текущую ветку локального репозитория</li>
+            <li><i>git clone</i> - скачивает репозиторий вместе со всей его историей изменений</li>
         </ul>
 
         <p><b>.gitignore</b> файл для приховування папок та файлів від системи контроля версій Git</p>
@@ -29,11 +29,11 @@
     </div>
     <div>
         <ul>
-            <li>git revert</li>
-            <li>git reset</li>
-            <li>git rebase</li>
-            <li>git cherry-pick</li>
-            <li>git stash</li>
+            <li><i>git revert</i> - безопасный способ отменить операцию без потери истории коммитов</li>
+            <li><i>git reset</i> - отменяют состояние кода после коммита (стирання коммітів)</li>
+            <li><i>git rebase</i> - используется для интеграции изменений из одной ветви в другую</li>
+            <li><i>git cherry-pick</i> - используется для перенесения отдельных коммитов из одного места репозитория в другое, обычно между ветками разработки и обслуживания</li>
+            <li><i>git stash</i> - временно сохраняет все незафиксированные изменения отслеживаемых файлов</li>
         </ul>
     </div>
 </body>
