--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <li><i>git config --global user.name blabla</i> - устанавливает имя, которое будет отображаться в поле автора у выполняемых вами коммитов</li>
             <li><i>git config --global user.email blabal@bla</i> - устанавливает адрес электронной почты, который будет отображаться в информации о выполняемых вами коммитах</li>
             <li><i>git init</i> - cоздаёт новый локальный репозиторий с заданным именем</li>
-            <li><i>git status</i> - gеречисляет все новые или изменённые файлы, которые нуждаются в фиксации</li>
+            <li><i>git status</i> - перечисляет все новые или изменённые файлы, которые нуждаются в фиксации</li>
             <li><i>git add</i> - индексирует указанный файл для последующего коммита</li>
             <li><i>git commit</i> - фиксирует проиндексированные изменения и сохраняет их в историю версий</li>
             <li><i>git log</i> - история коммитов для текущей ветки</li>
