added clickability and removed border

--- a/hw_4/index.html
+++ b/hw_4/index.html
@@ -40,7 +40,7 @@
                 <input type="text" name="First Name" placeholder="First Name" class="first-name">
                 <input type="text" name="Last Name" placeholder="Last Name" class="last-name">
                 <input type="text" name="Phone Number" placeholder="Phone Number" class="phone-number">
-                <select name="Select Service" id="selected">
+                <select name="Select Service" class="selected">
                     <option value="Facebook">Facebook</option>
                     <option value="Twitter">Twitter</option>
                     <option value="Instagram">Instagram</option>
