added styles and corrected sections

--- a/hw_5/index.html
+++ b/hw_5/index.html
@@ -58,7 +58,7 @@
                     <div class="wrapper-two-txt">
                         <h3>Search Data</h3>
                         <p>Don't worry if your data is very large, the Data Warehouse provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
-                        <a href="#">Learn more &rarr;</a>
+                        <a href="#" class="btn-learn">Learn more &rarr;</a>
                     </div>
                 </div>
                 <div class="wrapper-three">
@@ -68,7 +68,7 @@
                     <div class="wrapper-three-txt">
                         <h3>Print Out</h3>
                         <p>Print out service gives you convenience if someday you need print data, just edit it all and just print it.</p>
-                        <a href="#">Learn more &rarr;</a>
+                        <a href="#" class="btn-learn">Learn more &rarr;</a>
                     </div>
                 </div>
                 <div class="wrapper-four">
@@ -78,7 +78,7 @@
                     <div class="wrapper-four-txt">
                         <h3>24 Hours Access</h3>
                         <p>Access is given 24 hours a full morning to night and meet again in the morning, giving you comfort when you need data when urgent.</p>
-                        <a href="#">Learn more &rarr;</a>
+                        <a href="#" class="btn-learn">Learn more &rarr;</a>
                     </div>
                 </div>
                 <div class="wrapper-five">
@@ -88,35 +88,85 @@
                     <div class="wrapper-five-txt">
                         <h3>Security Code</h3>
                         <p>Data Security is one of our best facilities. Allows for your files to be safer. The file can be secured with a code or password that you created, so only you can open the file.</p>
-                        <a href="#">Learn more &rarr;</a>
+                        <a href="#" class="btn-learn">Learn more &rarr;</a>
                     </div>
                 </div>
             </div>
         </section>
         <section class="container">
-            <div>
+            <div class="testimonials">
                 <h2>Testimonials</h2>
             </div>
-            <div class="bloger">
+            <div class="blogger">
                 <div class="person-info">
                     <img src="./image/img/avatar.jpg" alt="the man with beard">
                 </div>
-                <div>
-                    <p>John Fang</p>
-                    <p><a href="#">wordfaang.com</a></p>
+                <div class="blogger-info">
+                    <p class="first-name"><strong>John Fang</strong></p>
+                    <a href="#">wordfaang.com</a>
                     <p>Suspendisse ultrices at diam lectus nullam. Nisl, saggitis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam laoreet nulla.</p>
                 </div>
             </div>
             <div class="navigation">
-                <div class="cloud-img">
-                    <img src="./image/svg/cloud.svg" alt="cloud">
+                <div class="slide-img">
+                    <img src="./image/svg/slide.svg" alt="cloud">
                 </div>
                 <div class="slide-arrow">
-                    <img src="./image/svg/vector2.svg" alt="arrow">
-                    <img src="./image/svg/vector1_1.svg" alt="smaller arrow">
+                    <a href="#" id="left-arrow">&larr;</a> 
+                    <a href="#" id="right-arrow">&rarr;</a>
                 </div>
             </div>
         </section>
+        <section class="container-two">
+            <div class="for-free">
+                <h2>Try for free!</h2>
+                <p>Get limited 1 week free try our features!</p>
+            </div>
+            <div class="container-two-btn">
+                <button class="first-btn">Learn more</button>
+                <button class="second-btn">Request Demo &rarr;</button>
+            </div>
+        </section>
+        <footer>
+            <div class="footer-content">
+                <div class="adress">
+                    <img src="./image/svg/logo.svg" alt="team logo">
+                    <p id="data-warehouse">DataWarehouse</p>
+                    <p class="street">Warehouse Society, 234.</p> 
+                    <p class="street-ave">Bahagia Ave Street PRBW 29281</p>
+                    <p class="nav"><a href="#">info@warehouse.info</a></p>
+                    <p class="nav"><a href="#">1-232-3434</a> (Main)</p>
+                </div>
+                <div class="about">
+                    <ul>About
+                        <li>Profile</li>
+                        <li>Features</li>
+                        <li>Careers</li>
+                        <li>DW News</li>
+                    </ul>
+                </div>
+                <div class="help">
+                    <ul>Help
+                        <li>Support</li>
+                        <li>Sign up</li>
+                        <li>Guide</li>
+                        <li>Reports</li>
+                        <li>Q&A</li>
+                    </ul>
+                </div>
+                <div class="media">
+                    <p>Social Media</p>
+                    <a href="#"><img src="./image/svg/fb.svg" alt="facebook"></a>
+                    <a href="#"><img src="./image/svg/twit.svg" alt="twitter"></a>
+                    <a href="#"><img src="./image/svg/insta.svg" alt="instagram"></a>
+                </div>
+            </div>
+            <div class="footer-end">
+                <p>&copy;Datawarehouse&trade;, 2020. All rights reserved. Company Registration Number: 21479524.</p>
+                <img src="./image/svg/cloud.svg" alt="cloud">
+
+            </div>
+        </footer>
     </main>
     <footer>
        
