added search area

--- a/hw_6/index.html
+++ b/hw_6/index.html
@@ -10,7 +10,7 @@
 <body>
     <table>
         <tr>
-            <th class="text-color">
+            <th class="t-head">
                 <form action="#" method="POST">
                     <label for="name">Name</label>
                     <select name="name-select" id="name">
@@ -42,7 +42,7 @@
     </table>
     <table>
         <tr>
-            <th class="text-color">
+            <th class="t-head">
                 <form action="#" method="POST">
                     <label for="name">Name</label>
                     <select name="name-select" id="name">
@@ -87,9 +87,9 @@
         </tr>
 
     </table>
-    <table>
+    <table class="table-search">
         <tr>
-            <th class="text-color">
+            <th class="t-head" >
                 <form action="#" method="POST">
                     <label for="name">Name</label>
                     <select name="name-select" id="name">
@@ -101,9 +101,9 @@
             </th>
             <th class="text-color">Date</th>
             <th>
-                <form action="#" method="POST">
+                <form action="#" method="POST" >
                     <label for="search"></label>
-                    <input type="search" name="search" id="search" placeholder="Search">
+                    <input type="search" name="search" id="search" placeholder="Search" class="search-area">
                 </form>
             </th>
         </tr>
