--- a/hw_6/index.html
+++ b/hw_6/index.html
@@ -8,122 +8,128 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <table>
-        <tr>
-            <th class="t-head">
-                <form action="#" method="POST">
-                    <label for="name">Name</label>
-                    <select name="name-select" id="name">
-                        <option value="name 1"></option>
-                        <option value="name 2"></option>
-                        <option value="name 3"></option>
-                    </select>
-                </form>
-            </th>
-            <th class="text-color">Date</th>
-            <th class="text-color"></th>
-        </tr>
-        <tr>
-            <td class="text-color">File.pdf</td>
-            <td class="text">3 mins ago</td>
-            <td class="doots">•••</td>
-        </tr>
-        <tr>
-            <td class="text-color">File.pdf</td>
-            <td class="text">Yesterday</td>
-            <td class="doots">•••</td>
-        </tr>
-        <tr>
-            <td class="text-color">File.pdf</td>
-            <td class="text">June 1st, 2019</td>
-            <td class="doots">•••</td>
-        </tr>
+    <main>
+        <div>
+            <table>
+                <tr>
+                    <th class="t-head">
+                        <form action="#" method="POST">
+                            <label for="name">Name</label>
+                            <select name="name-select" id="name">
+                                <option value="name 1"></option>
+                                <option value="name 2"></option>
+                                <option value="name 3"></option>
+                            </select>
+                        </form>
+                    </th>
+                    <th class="text-color">Date</th>
+                    <th class="text-color"></th>
+                </tr>
+                <tr>
+                    <td class="text-color">File.pdf</td>
+                    <td class="text">3 mins ago</td>
+                    <td class="doots">•••</td>
+                </tr>
+                <tr>
+                    <td class="text-color">File.pdf</td>
+                    <td class="text">Yesterday</td>
+                    <td class="doots">•••</td>
+                </tr>
+                <tr>
+                    <td class="text-color">File.pdf</td>
+                    <td class="text">June 1st, 2019</td>
+                    <td class="doots">•••</td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    <th class="t-head">
+                        <form action="#" method="POST">
+                            <label for="name">Name</label>
+                            <select name="name-select" id="name">
+                                <option value="name 1"></option>
+                                <option value="name 2"></option>
+                                <option value="name 3"></option>
+                            </select>
+                        </form>
+                    </th>
+                    <th class="text-color">Date</th>
+                    <th class="text-color"></th>
+                </tr>
+                <tr>
+                    <td class="text-color">
+                        <form action="#" method="POST">
+                            <input type="checkbox" id="file" name="file" class="checkbox">
+                            <label for="file">File.pdf</label>
+                        </form>
+                    </td>
+                    <td class="text">3 mins ago</td>
+                    <td class="doots-table">•••</td>
+                </tr>
+                <tr>
+                    <td class="text-color">
+                        <form action="#" method="POST">
+                            <input type="checkbox" id="file" name="file-2" checked class="checkbox">
+                            <label for="file-2">File.pdf</label>
+                        </form>
+                    </td>
+                    <td class="text">Yesterday</td>
+                    <td class="doots-table">•••</td>
+                </tr>
+                <tr>
+                    <td class="text-color">
+                        <form action="#" method="POST">
+                            <input type="checkbox" id="file-3">
+                            <label for="file-3">File.pdf</label>
+                        </form>
+                    </td>
+                    <td class="text">June 1st, 2019</td>
+                    <td class="doots-table">•••</td>
+                </tr>
 
-    </table>
-    <table>
-        <tr>
-            <th class="t-head">
-                <form action="#" method="POST">
-                    <label for="name">Name</label>
-                    <select name="name-select" id="name">
-                        <option value="name 1"></option>
-                        <option value="name 2"></option>
-                        <option value="name 3"></option>
-                    </select>
-                </form>
-            </th>
-            <th class="text-color">Date</th>
-            <th class="text-color"></th>
-        </tr>
-        <tr>
-            <td class="text-color">
-                <form action="#" method="POST">
-                    <input type="checkbox" id="file" name="file">
-                    <label for="file">File.pdf</label>
-                </form>
-            </td>
-            <td class="text">3 mins ago</td>
-            <td class="doots-table">•••</td>
-        </tr>
-        <tr>
-            <td class="text-color">
-                <form action="#" method="POST">
-                    <input type="checkbox" id="file" name="file-2" checked>
-                    <label for="file-2">File.pdf</label>
-                </form>
-            </td>
-            <td class="text">Yesterday</td>
-            <td class="doots-table">•••</td>
-        </tr>
-        <tr>
-            <td class="text-color">
-                <form action="#" method="POST">
-                    <input type="checkbox" id="file-3">
-                    <label for="file-3">File.pdf</label>
-                </form>
-            </td>
-            <td class="text">June 1st, 2019</td>
-            <td class="doots-table">•••</td>
-        </tr>
+            </table>
+        </div>
+        <div>
+            <table class="table-search">
+                <tr>
+                    <th class="t-head" >
+                        <form action="#" method="POST">
+                            <label for="name">Name</label>
+                            <select name="name-select" id="name">
+                                <option value="name 1"></option>
+                                <option value="name 2"></option>
+                                <option value="name 3"></option>
+                            </select>
+                        </form>
+                    </th>
+                    <th class="text-color">Date</th>
+                    <th>
+                        <form action="#" method="POST" >
+                            <label for="search"></label>
+                            <input type="search" name="search" id="search" placeholder="Search" class="search-area">
+                        </form>
+                    </th>
+                </tr>
+                <tr>
+                    <td class="text-color">File.pdf</td>
+                    <td class="text">3 mins ago</td>
+                    <td class="doots-table">•••</td>
+                </tr>
+                <tr>
+                    <td class="text-color">File.pdf</td>
+                    <td class="text">Yesterday</td>
+                    <td class="doots-table">•••</td>
+                </tr>
+                <tr>
+                    <td class="text-color">File.pdf</td>
+                    <td class="text">June 1st, 2019</td>
+                    <td class="doots-table">•••</td>
+                </tr>
 
-    </table>
-    <table class="table-search">
-        <tr>
-            <th class="t-head" >
-                <form action="#" method="POST">
-                    <label for="name">Name</label>
-                    <select name="name-select" id="name">
-                        <option value="name 1"></option>
-                        <option value="name 2"></option>
-                        <option value="name 3"></option>
-                    </select>
-                </form>
-            </th>
-            <th class="text-color">Date</th>
-            <th>
-                <form action="#" method="POST" >
-                    <label for="search"></label>
-                    <input type="search" name="search" id="search" placeholder="Search" class="search-area">
-                </form>
-            </th>
-        </tr>
-        <tr>
-            <td class="text-color">File.pdf</td>
-            <td class="text">3 mins ago</td>
-            <td class="doots-table">•••</td>
-        </tr>
-        <tr>
-            <td class="text-color">File.pdf</td>
-            <td class="text">Yesterday</td>
-            <td class="doots-table">•••</td>
-        </tr>
-        <tr>
-            <td class="text-color">File.pdf</td>
-            <td class="text">June 1st, 2019</td>
-            <td class="doots-table">•••</td>
-        </tr>
-
-    </table>
-    
+            </table>
+        </div>
+    </main>
 </body>
 </html>
