--- a/hw_5/index.html
+++ b/hw_5/index.html
@@ -28,9 +28,7 @@
     </header>
     <main>
         <section class="save-data">
-            <div class="data-img">
-                <!--<img src="./image/img/image1.jpg" alt="save data">-->
-            </div>
+            <div class="data-img"></div>
             <div class="data-tex">
                 <h1>Save your data storage here.</h1>
                 <p>Data Warehouse is a data storage area that has been tasted for security, so you can store your data here safely but not be afraid of being stolen by others.</p>
@@ -38,7 +36,7 @@
             </div>
         </section>
         <section class="storage-bank">
-            <div class="bank-img"><img src=".//image/img/image2.jpg" alt="storage bank"></div>
+            <div class="bank-img"><img src=".//image/img/image2.jpg" alt="storage bank" ></div>
 
             <div class="storage-bank-text">
                 <div class="text-h2"><h2>We are a high-level data storage bank</h2></div>
@@ -52,43 +50,47 @@
                 <p>Some of the features and advantages thst we provide for those of you who store data in this Data Warehouse.</p>
             </div>
             <div id="wrapper-wrap">
-                <div class="wrapper-two">
-                    <div class="wrapper-two-img">
-                        <img src="./image/img/image3.jpg" alt="search data man" width="232" height="211"></div>
-                    <div class="wrapper-two-txt">
-                        <h3>Search Data</h3>
-                        <p>Don't worry if your data is very large, the Data Warehouse provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
-                        <a href="#" class="btn-learn">Learn more &rarr;</a>
+                <div class="wrapper-container-first">
+                    <div class="wrapper-two">
+                        <div class="wrapper-two-img">
+                            <img src="./image/img/image3.jpg" alt="search data man" width="232" height="211"></div>
+                        <div class="wrapper-two-txt">
+                            <h3>Search Data</h3>
+                            <p>Don't worry if your data is very large, the Data Warehouse provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+                            <a href="#" class="btn-learn">Learn more &rarr;</a>
+                        </div>
+                    </div>
+                    <div class="wrapper-four">
+                        <div class="wrapper-four-img">
+                            <img src="./image/img/image5.jpg" alt="24 hours access">
+                        </div>
+                        <div class="wrapper-four-txt">
+                            <h3>24 Hours Access</h3>
+                            <p>Access is given 24 hours a full morning to night and meet again in the morning, giving you comfort when you need data when urgent.</p>
+                            <a href="#" class="btn-learn">Learn more &rarr;</a>
+                        </div>
                     </div>
                 </div>
-                <div class="wrapper-three">
-                    <div class="wrapper-three-img">
-                        <img src="./image/img/image4.jpg" alt="print out">
+                <div class="wrapper-container-second">
+                    <div class="wrapper-three">
+                        <div class="wrapper-three-img">
+                            <img src="./image/img/image4.jpg" alt="print out">
+                        </div>
+                        <div class="wrapper-three-txt">
+                            <h3>Print Out</h3>
+                            <p>Print out service gives you convenience if someday you need print data, just edit it all and just print it.</p>
+                            <a href="#" class="btn-learn">Learn more &rarr;</a>
+                        </div>
                     </div>
-                    <div class="wrapper-three-txt">
-                        <h3>Print Out</h3>
-                        <p>Print out service gives you convenience if someday you need print data, just edit it all and just print it.</p>
-                        <a href="#" class="btn-learn">Learn more &rarr;</a>
-                    </div>
-                </div>
-                <div class="wrapper-four">
-                    <div class="wrapper-four-img">
-                        <img src="./image/img/image5.jpg" alt="24 hours access">
-                    </div>
-                    <div class="wrapper-four-txt">
-                        <h3>24 Hours Access</h3>
-                        <p>Access is given 24 hours a full morning to night and meet again in the morning, giving you comfort when you need data when urgent.</p>
-                        <a href="#" class="btn-learn">Learn more &rarr;</a>
-                    </div>
-                </div>
-                <div class="wrapper-five">
-                    <div class="wrapper-five-img">
-                        <img src="./image/img/image6.jpg" alt="Security Code">
-                    </div>
-                    <div class="wrapper-five-txt">
-                        <h3>Security Code</h3>
-                        <p>Data Security is one of our best facilities. Allows for your files to be safer. The file can be secured with a code or password that you created, so only you can open the file.</p>
-                        <a href="#" class="btn-learn">Learn more &rarr;</a>
+                    <div class="wrapper-five">
+                        <div class="wrapper-five-img">
+                            <img src="./image/img/image6.jpg" alt="Security Code">
+                        </div>
+                        <div class="wrapper-five-txt">
+                            <h3>Security Code</h3>
+                            <p>Data Security is one of our best facilities. Allows for your files to be safer. The file can be secured with a code or password that you created, so only you can open the file.</p>
+                            <a href="#" class="btn-learn">Learn more &rarr;</a>
+                        </div>
                     </div>
                 </div>
             </div>
