added button and pseudo classes for horisontsl lines

--- a/hw_8/index.html
+++ b/hw_8/index.html
@@ -38,7 +38,9 @@
             <div class="block">24</div>
         </div>
         <!-- Our BUTTON -->
-        <div></div>
+        <div class="block-btn">
+            <button class="btn">CREATE MY WEBSITE</button>
+        </div>
     </div>
 </body>
 </html>
