added hw 9 Grid

--- a/hw_7/index.html
+++ b/hw_7/index.html
@@ -4,10 +4,93 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HW_#9 "Grid”</title>
+    <title>HW_9 "Grid”</title>
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat:wght@400;600;700;800&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="./img/jpg/logo.jpg" alt="firm logo" title="firm logo" width="136" height="54">
+        </div>
+        <div class="header-info">    
+            <div class="navigation">
+                <a href="#">Главная</a>
+                <a href="#">Квартиры</a>
+                <a href="#">Контакты</a>
+                <a href="#">О нас</a>
+            </div>
+            <div class="mail">
+                <div class="mail-svg"></div>
+                <a href="#">mail@yandex.ru</a>
+            </div>
+            <div class="phone">
+                <div class="phone-svg"></div>
+                <a href="#">+7 (919) 714-25-00</a>
+            </div>
+            <div>
+                <button class="header-btn">Заказать звонок</button>
+            </div>
+        </div>    
+    </header>
+    <main>
+        <section class="rent">
+            <div class="wrapper-bg"></div>
+            <div class="wrapper-img"></div>
+            <div class="rent-txt">
+                <h1>Аренда квартир <br> в Березниках</h1>
+                <p>На длительный срок <br> или посуточно</p>
+                <button>Смотреть варианты</button>
+            </div>
+            <div class="card">
+                <div class="card-one">
+                    <div class="vector-1"></div>
+                    <p>Заключаем договоры, предоставляет отчётные документы</p>
+                </div>
+                <div class="card-two">
+                    <div class="vector-2"></div>
+                    <p>Наличный и <br> безналичный расчёт</p>
+                </div>
+                <div class="card-three">
+                    <div class="vector-3"></div>
+                    <p>Бронирование и заселение круглосуточно</p>
+                </div>
+                <div class="card-four">
+                    <div class="vector-4"></div>
+                    <p>Полная <br> конфиденциальность</p>
+                </div>
+            </div>
+        </section>
+        <section class="apartments">
+            <div class="title">
+                <h2>Наши квартиры</h2>
+            </div>
+            <div class="rooms">
+                <div></div>
+                <div>
+                    <h3>Однокомнатная квартира</h3>
+                    <p>Сутки: <span>1500 ₽</span></p>
+                    <div>
+                        <div class="location-svg"></div>
+                        <p>Березники, ул. Власова 14</p>
+                    </div>
+                    <button class="rooms-btn">Подробнее</button>
+
+                </div>
+            </div>
+            <div>
+                <button class="apartments-btn">Смотреть все квартиры</button>
+            </div>
+        </section>
+        <section class="about-us"></section>
+        <section class="contacts"></section>
+        <section class="reviews"></section>
+        <section class="write"></section>
+        <section class="copyright"></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
