--- a/hw_7/index.html
+++ b/hw_7/index.html
@@ -69,17 +69,21 @@
                 <h2>Наши квартиры</h2>
             </div>
             <div class="rooms">
-                <div></div>
                 <div>
-                    <h3>Однокомнатная квартира</h3>
-                    <p>Сутки: <span>1500 ₽</span></p>
-                    <div>
+                    <div class="first-street">
+                        <div class="rooms-img-one"></div>
+                    </div>
+                    <div class="txt-one">
+                        <h3>Однокомнатная квартира</h3>
+                        <p>Сутки: <span class="price">1500 ₽</span></p>
+                    </div>
+                    <div class="location">
                         <div class="location-svg"></div>
                         <p>Березники, ул. Власова 14</p>
                     </div>
                     <button class="rooms-btn">Подробнее</button>
-
                 </div>
+
             </div>
             <div>
                 <button class="apartments-btn">Смотреть все квартиры</button>
