create section contacts

--- a/hw_7/index.html
+++ b/hw_7/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <button class="rooms-btn">Подробнее</button>
                 </div>
-                <div class="wrapper-ащгк">
+                <div class="wrapper-four">
                     <div class="fourth-street">
                         <div class="rooms-img-four"></div>
                     </div>
@@ -165,15 +165,47 @@
                 <div>
                     <hr class="horizontal-one">
                 </div>
-                <!-- <div>
-                    <hr class="horizontal-two">
-                </div>
-                <div>
-                    <hr class="horizontal-three">
-                </div> -->
+                
             </div>
         </section>
-        <section class="contacts"></section>
+        <section class="contacts">
+            <div class="contacts-txt">
+                <div class="contacts-one">
+                    <h2>Контакты</h2>
+                </div>
+                <div class="contacts-two">
+                    <div class="wrapper-local">
+                        <div class="img-local"></div>
+                        <p>Пермский край, город Березники</p>
+                    </div>
+                    <div class="wrapper-mail">
+                        <div class="img-mail"></div>
+                        <a href="#"><p>mail@yandex.ru</p></a>
+                    </div>
+                    <div class="wrapper-phone">
+                        <div class="img-phone"></div>
+                        <a href="#"><p>+7 (919) 714-25-00</p></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social">
+                <div class="soc">
+                    <div class="soc-insta">
+                        <div class="img-insta"></div>
+                        <a href="#"><p>arendakvartir59</p></a>
+                    </div>
+                    <div class="soc-vk">
+                        <div class="img-vk"></div>
+                        <a href="#"><p>arendakvartir59</p></a>
+                    </div>
+                </div>
+                <div class="btn">
+                    <button class="contacts-btn-one">Подписаться</button>
+                    <button class="contacts-btn-two">Подписаться</button>
+                </div>
+            </div>
+            <div class="map"></div>
+        </section>
         <section class="reviews"></section>
         <section class="write"></section>
         <section class="copyright"></section>
